# status-wasm-filter

./: Cargo.toml  README.md
src/: filter.rs
test/: demo.sh
test/config/: demo.yml
