[package]
name = "my-rust-filter"
version = "0.1.0"
authors = ["Caio Ramos Casimiro <caiorcasimiro@gmail.com>"]
edition = "2018"

[lib]
path = "src/filter.rs"
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2"
log = "0.4"
serde-json-wasm = "0.5.0"
serde = { version = "*", features = ["derive"] }
